--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -118,7 +118,7 @@
 
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-start border-info border-4">
-            <div class="card-body">
+            <div class="card-body position-relative">
                 <div class="d-flex align-items-center">
                     <div class="flex-grow-1">
                         <div class="small fw-bold text-info text-uppercase mb-1">RFPOs</div>
@@ -128,6 +128,7 @@
                         <i class="fas fa-file-contract fa-2x text-gray-300"></i>
                     </div>
                 </div>
+                <a href="{{ url_for('rfpos') }}" class="stretched-link" aria-label="View RFPOs"></a>
             </div>
         </div>
     </div>
@@ -154,6 +155,8 @@
 
 <!-- Approval System Statistics -->
 <div class="row mb-4">
+    {# Hidden per request: Active Workflows summary card #}
+    {#
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-start border-secondary border-4">
             <div class="card-body">
@@ -169,7 +172,10 @@
             </div>
         </div>
     </div>
+    #}
 
+    {# Hidden per request: Approval Instances summary card #}
+    {#
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-start border-info border-4">
             <div class="card-body">
@@ -185,6 +191,7 @@
             </div>
         </div>
     </div>
+    #}
 
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-start border-warning border-4">
